GH-30 implement browse command, will need work to optimize the visual element and include quantity